Disable RabbitMQ automatic recovery
The Publishing API uses Sidekiq for retrying jobs, and there has
potentially been issues with mixing the indefinite retrying from
Bunny, with Sidekiq workers [1]. As Sidekiq handles retrying, stop
RabbitMQ from doing so, and instead use the Sidekiq retrying methods.

1: 2018-07-05:
There was a incident involving Sidekiq using up too many threads,
potentially because the indefinite retrying for connection issues was
causing issues with Sidekiq workers.

--- a/config/rabbitmq.yml
+++ b/config/rabbitmq.yml
@@ -5,6 +5,7 @@ defaults: &defaults
   pass: publishing_api
   exchange: published_documents
   recover_from_connection_close: true
+  automatically_recover: false
 
 development:
   <<: *defaults
