Fix Naming/UncommunicativeMethodParamName offenses

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,15 @@ Lint/HandleExceptions:
 AllCops:
   TargetRubyVersion: 2.3
 
+Metrics/BlockLength:
+  Enabled: true
+  Exclude:
+    - config/**/*
+    - lib/tasks/**/*
+    - "**/spec/**/*"
+  ExcludedMethods:
+    - namespace
+
 Style/ConditionalAssignment:
   Enabled: false
 
