--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,24 +1,3 @@
-Lint/AmbiguousBlockAssociation:
-  Enabled: true
-  Exclude:
-    - spec/**/*
-
-Lint/HandleExceptions:
-  Exclude:
-    - spec/**/*
-
-Metrics/BlockLength:
-  Enabled: true
-  Exclude:
-    - config/**/*
-    - lib/tasks/**/*
-    - "**/spec/**/*"
-  ExcludedMethods:
-    - namespace
-
-Style/ConditionalAssignment:
-  Enabled: false
-
-Style/SymbolArray:
-  Exclude:
-    - lib/expansion_rules.rb
+inherit_gem:
+  rubocop-govuk:
+    - config/default.yml
