--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,13 @@
 inherit_gem:
   rubocop-govuk:
     - config/default.yml
+    - config/rails.yml
+
+Rails/OutputSafety:
+  Enabled: false
+Rails/HelperInstanceVariable:
+  Enabled: false
+Rails/HasManyOrHasOneDependent:
+  Enabled: false
+Rails/InverseOf:
+  Enabled: false
