Rubocop: ignore migrations from before 2020
There are a number of linting errors for migration files from
2015 to 2019, which cannot be fixed automatically. The time
and effort to fix, and the risk of an incorrect fix, makes it
not worth doing.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,10 @@ inherit_mode:
   merge:
     - Exclude
 
+AllCops:
+  Exclude:
+    - db/migrate/201*.rb
+
 Rails/OutputSafety:
   Enabled: false
 Rails/HelperInstanceVariable:
