Upgrade gds-api-adapters & enable auto-updates
Version 72+ works best with the latest govuk_app_config.

I've enabled automatic updates for gds-api-adapters because we
generally do that in other repos.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,8 @@ updates:
       # Internal gems
       - dependency-name: "govuk*"
         dependency-type: direct
+      - dependency-name: gds-api-adapters
+        dependency-type: direct
       - dependency-name: gds-sso
         dependency-type: direct
       - dependency-name: govspeak
