--- a/config/rabbitmq.yml
+++ b/config/rabbitmq.yml
@@ -1,15 +1,15 @@
 defaults: &defaults
   port: 5672
   vhost: /
-  user: publishing_api
-  pass: publishing_api
+  user: guest
+  pass: guest
   exchange: published_documents
   recover_from_connection_close: true
   automatically_recover: false
 
 development:
   <<: *defaults
-  host: localhost
+  host: rabbitmq
 
 test:
   <<: *defaults
