--- a/config/rabbitmq.yml
+++ b/config/rabbitmq.yml
@@ -5,7 +5,8 @@ defaults: &defaults
   pass: publishing_api
   exchange: published_documents
   recover_from_connection_close: true
-  automatically_recover: false
+  automatically_recover: true
+  # threaded: true
 
 development:
   <<: *defaults
