--- a/config/rabbitmq.yml
+++ b/config/rabbitmq.yml
@@ -4,8 +4,8 @@ defaults: &defaults
   user: publishing_api
   pass: publishing_api
   exchange: published_documents
-  recover_from_connection_close: true
-  automatically_recover: true
+  recover_from_connection_close: false
+  automatically_recover: false
   threaded: false
 
 development:
