--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,15 @@ jobs:
           TEST_DATABASE_URL: ${{ steps.setup-postgres.outputs.db-url }}
         run: bundle exec rake spec
 
+      - name: Publish Pact tests
+        env:
+          PACT_BROKER_BASE_URL: https://pact-broker.cloudapps.digital
+          PACT_BROKER_USERNAME: ${{ secrets.GOVUK_PACT_BROKER_USERNAME }}
+          PACT_BROKER_PASSWORD: ${{ secrets.GOVUK_PACT_BROKER_PASSWORD }}
+          PACT_CONSUMER_VERSION: branch-${{ github.ref_name }}
+          PACT_TARGET_BRANCH: branch-${{ github.ref_name }}
+        run: bundle exec rake pact:publish:branch
+
   check-schemas-build:
     name: Check content schemas are built
     runs-on: ubuntu-latest
@@ -74,3 +83,10 @@ jobs:
             exit 1
           fi
             
+  run-content-store-pact-tests:
+    name: Run Content Store Pact tests
+    needs: test-ruby
+    uses: alphagov/content-store/.github/workflows/verify-pact.yml@main
+    with:
+      ref: deployed-to-production
+      pact_consumer_version: branch-${{ github.ref_name }}
