Clean up Dockerfile.
- Parameterise the Ruby version.
- Make better use of `WORKDIR`.
- Use env vars from the base image where appropriate, instead of hardcoding paths.
- Remove unnecessary use of `bundle exec`.
- Update `.dockerignore`.

Tested: app boots with `docker run`.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,20 @@
 .dockerignore
 .git
+.github
 .gitignore
 Dockerfile
 Jenkinsfile
 Procfile
 README.md
+coverage
 docs
-spec
+features
 log
+node_modules
+package.json
+script
+spec
+test
 tmp
+vendor
+yarn.lock
