Omit source files for content_schemas from image.
We only need the compiled JSON (`content_schemas/dist`) at runtime, not
the source jsonnet etc.

--- a/.dockerignore
+++ b/.dockerignore
@@ -6,6 +6,9 @@ Dockerfile
 Jenkinsfile
 Procfile
 README.md
+content_schemas/*.md
+content_schemas/examples
+content_schemas/formats
 coverage
 docs
 features
