--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,18 @@ jobs:
           TEST_DATABASE_URL: ${{ steps.setup-postgres.outputs.db-url }}
         run: bundle exec rake spec
 
+      # We upload the generated pact tests so they can be used in a later action
+      - name: Create pact artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: pacts
+          path: spec/pacts/*.json
+
       - name: Publish Pact tests
+        # We only publish the main branch as this is the only one
+        # that automated tests pull from the pact broker. We use GitHub Action
+        # artifacts to test branches.
+        if: ${{ github.ref == 'refs/heads/main' }}
         env:
           PACT_BROKER_BASE_URL: https://pact-broker.cloudapps.digital
           PACT_BROKER_USERNAME: ${{ secrets.GOVUK_PACT_BROKER_USERNAME }}
@@ -82,11 +93,11 @@ jobs:
             echo "::error title=Uncommited changes to content schemas::If these are your changes, build the content schemas and commit the changes."
             exit 1
           fi
-            
+
   run-content-store-pact-tests:
     name: Run Content Store Pact tests
     needs: test-ruby
-    uses: alphagov/content-store/.github/workflows/verify-pact.yml@main
+    uses: alphagov/content-store/.github/workflows/verify-pact.yml@pact-artifact
     with:
       ref: deployed-to-production
-      pact_consumer_version: branch-${{ github.ref_name }}
+      pact_artifact: pacts
