Add schema for 'How Government Works' page
This is currently hardcoded in Whitehall but will need a content item to
enable rendering in another application.

Note that all the details fields are optional as they will not be
present when "reshuffle mode" is switched on.

--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -66,6 +66,7 @@
 - hmrc_manual
 - hmrc_manual_section
 - homepage
+- how_government_works
 - html_publication
 - impact_assessment
 - imported # Not in content store
