Add Schema for Fields of Operation index page
This is part of wider work to have this page rendered by another application

--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -46,6 +46,7 @@
 - facet
 - fatality_notice
 - field_of_operation
+- fields_of_operation
 - finder
 - finder_email_signup
 - flood_and_coastal_erosion_risk_management_research_report
