Add the none option to disease control zone types

--- a/content_schemas/examples/specialist_document/frontend/animal-disease-case.json
+++ b/content_schemas/examples/specialist_document/frontend/animal-disease-case.json
@@ -246,6 +246,10 @@
                 {
                   "label": "Wild bird monitoring area",
                   "value": "wild-bird-monitoring"
+                },
+                {
+                  "label": "None",
+                  "value": "none"
                 }
               ]
             },
