Add schema for world index page
This schema will be used for the content item hosted at `/world`.

--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -176,6 +176,7 @@
 - vanish # Not in the content store
 - welsh_language_scheme
 - working_group
+- world_index
 - world_location
 - world_location_news
 - world_news_story
