[1141] - New specialist document for marine equipment approved recommendations
Creating schema definitions for the new document type matching given requirements provided by Maritime Coastguard Agency.

--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -82,6 +82,7 @@
 - local_transaction
 - maib_report
 - mainstream_browse_page
+- marine_equipment_approved_recommendation
 - manual
 - manual_section
 - map
