--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -182,5 +182,6 @@
 - world_location_news
 - world_news_story
 - worldwide_office_staff_role
+- worldwide_office
 - worldwide_organisation
 - written_statement
