Configure CI to publish pacts to broker
The Publishing API <-> Content Store pact isn't currently being published to the broker as part of Publishing API's CI, meaning that Content Store's CI is currently running pact verification against a ~7 month old version of this pact.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,11 +95,41 @@ jobs:
       ref: deployed-to-production
       pact_artifact: pacts
 
+  publish-pacts:
+    needs:
+      - test-ruby
+    if: ${{ github.ref == 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+      - uses: actions/download-artifact@v3
+        with:
+          name: pacts
+          path: tmp/pacts
+      - run: bundle exec rake pact:publish
+        env:
+          PACT_CONSUMER_VERSION: branch-${{ github.ref_name }}
+          PACT_BROKER_BASE_URL: https://pact-broker.cloudapps.digital
+          PACT_BROKER_USERNAME: ${{ secrets.GOVUK_PACT_BROKER_USERNAME }}
+          PACT_BROKER_PASSWORD: ${{ secrets.GOVUK_PACT_BROKER_PASSWORD }}
+          PACT_PATTERN: tmp/pacts/*.json
+      - run: bundle exec rake pact:publish
+        env:
+          PACT_CONSUMER_VERSION: branch-${{ github.ref_name }}
+          PACT_BROKER_BASE_URL: https://govuk-pact-broker-6991351eca05.herokuapp.com
+          PACT_BROKER_USERNAME: ${{ secrets.GOVUK_PACT_BROKER_USERNAME }}
+          PACT_BROKER_PASSWORD: ${{ secrets.GOVUK_PACT_BROKER_PASSWORD }}
+          PACT_PATTERN: tmp/pacts/*.json
+
   delete-pact-artifact:
     name: Delete Pact artifact
     needs:
       - test-ruby
       - run-content-store-pact-tests
+      - publish-pacts
     # Run whenever test-ruby is a success regardless of run-content-store-pact-tests outcome
     if: ${{ needs.test-ruby.result == 'success' && always() }}
     runs-on: ubuntu-latest
