The deployed-to-production branch is stale
This branch does not get automatically updated on deploy anymore, so it's currently pointing to an old pre-replatforming commit.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
     needs: test-ruby
     uses: alphagov/content-store/.github/workflows/verify-pact.yml@main
     with:
-      ref: deployed-to-production
+      ref: main
       pact_artifact: pacts
 
   publish-pacts:
