--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -36,6 +36,7 @@
 - document_collection
 - drcf_digital_markets_research
 - drug_safety_update
+- editionable_worldwide_organisation
 - email_alert_signup
 - embassies_index
 - employment_appeal_tribunal_decision
