WIP - with recursive link expansion
  To be used something like this (note: not correct or fast yet, and certainly not simple)

    with recursive
        link_tree(target_content_id, link_type, expansion_rule_id) AS (
            (
                with link_types(link_type, rule_id) AS (
                    select distinct lers.link_type, lers.id from link_expansion_rules lers
                    left join link_expansion_rule_relationships rels on lers.id = rels.link_expansion_rule_id
                    where rels.parent_id is null
                ),
                reverse_link_types(name, link_type, rule_id) AS (
                    select distinct revs.name, revs.link_type, lers.id from link_expansion_rules lers
                    left join link_expansion_rule_relationships rels on lers.id = rels.link_expansion_rule_id
                    join link_expansion_reverse_rules revs on lers.link_type = revs.name
                    where rels.parent_id is null
                )
                -- Link Set Links: Non-recursive Term
                select target_content_id, links.link_type, link_types.rule_id from links
                join link_types on link_types.link_type = links.link_type
                join link_sets on links.link_set_id = link_sets.id
                where link_sets.content_id = :content_id
            union
                -- Reverse Links: Non-recursive Term
                select content_id, reverse_link_types.name, reverse_link_types.rule_id from links
                join reverse_link_types on reverse_link_types.link_type = links.link_type
                join link_sets on links.link_set_id = link_sets.id
                where links.target_content_id = :content_id
                -- TODO Edition Links: Non-recursive Term
            )
        union
            (
                with recurse(target_content_id, link_type, expansion_rule_id) AS (
                    select target_content_id, link_type, expansion_rule_id from link_tree
       

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@ default: &default
 
 development:
   <<: *default
-  database: publishing_api_development
+  database: publishing-api
   url: <%= ENV["DATABASE_URL"]%>
 
 test:
