--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -46,6 +46,7 @@
 - export_health_certificate
 - external_content
 - facet
+- farming_grant_option
 - fatality_notice
 - field_of_operation
 - fields_of_operation
