--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -151,6 +151,7 @@
 - statutory_guidance
 - statutory_instrument
 - step_by_step_nav
+- substitute # Not in the content store
 - take_part
 - tax_tribunal_decision
 - taxon
