Add popular links schema and update homepage schema to have popular links

--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -79,6 +79,7 @@
 - licence
 - license_finder
 - licence_transaction
+- link_collection
 - local_transaction
 - maib_report
 - mainstream_browse_page
