Add Content Block Email Address content type
The Content Modelling Team are working on a spike to add the ability
to publishing reusable pieces of content (“Content Blocks”) via
Whitehall. The first content type we’re looking at is Email addresses,
so we’re adding a simple content schema to cover this functionality.

--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -22,6 +22,7 @@
 - closed_call_for_evidence
 - closed_consultation
 - cma_case
+- content_block_email_address
 - complaints_procedure
 - completed_transaction
 - consultation
