Fix value for MCA lsa finder

--- a/content_schemas/examples/specialist_document/frontend/life-saving-maritime-appliance-service-stations.json
+++ b/content_schemas/examples/specialist_document/frontend/life-saving-maritime-appliance-service-stations.json
@@ -290,7 +290,7 @@
                 },
                 {
                   "label": "Ocean Safety (Remploy brand)",
-                  "value": "ocean safety-remploy-brand"
+                  "value": "ocean-safety-remploy-brand"
                 },
                 {
                   "label": "Ocean Safety Liferafts",
