Add veterans support service specialist document type

--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -170,6 +170,7 @@
 - travel_advice_index
 - utaac_decision
 - vanish # Not in the content store
+- veterans_support_organisation
 - welsh_language_scheme
 - working_group
 - world_index
