Add a new disease to animal disease case finder (Peste des petits ruminants)

--- a/content_schemas/examples/specialist_document/frontend/animal-disease-case.json
+++ b/content_schemas/examples/specialist_document/frontend/animal-disease-case.json
@@ -164,6 +164,10 @@
                   "value": "newcastle-disease"
                 },
                 {
+                  "label":"Peste des petits ruminants",
+                  "value": "peste-des-petits-ruminants"
+                },
+                {
                   "label": "Swine vesicular disease",
                   "value": "swine-vesicular-disease"
                 }
