--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -78,6 +78,7 @@
 - independent_report
 - international_development_fund
 - international_treaty
+- landing_page
 - licence
 - license_finder
 - licence_transaction
