--- a/.github/workflows/test-content-schemas-2.yml
+++ b/.github/workflows/test-content-schemas-2.yml
@@ -65,9 +65,9 @@ jobs:
 
   test-specialist-publisher:
     name: Test Specialist Publisher
-    uses: alphagov/specialist-publisher/.github/workflows/rspec.yml@main
+    uses: alphagov/specialist-publisher/.github/workflows/rspec.yml@SFO-Finder-iteration-3
     with:
-      ref: 'main'
+      ref: 'SFO-Finder-iteration-3'
       publishingApiRef: ${{ github.ref }}
 
   test-travel-advice-publisher:
