Add new Calendars to yml file

--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -13,6 +13,7 @@
 - board_member_role
 - business_finance_support_scheme
 - calendar
+- calendars
 - call_for_evidence
 - call_for_evidence_outcome
 - case_study
