--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -10,6 +10,7 @@
 - answer
 - asylum_support_decision
 - authored_article
+- bank_holidays
 - board_member_role
 - business_finance_support_scheme
 - calendar
@@ -20,6 +21,7 @@
 - chief_professional_officer_role
 - chief_scientific_officer_role
 - chief_scientific_advisor_role
+- clocks_change
 - closed_call_for_evidence
 - closed_consultation
 - cma_case
