Add "editionable_topical_events" to the topical events content type
This means that we can start adding editionable topical events to whitehall using the existing schema

--- a/content_schemas/allowed_document_types.yml
+++ b/content_schemas/allowed_document_types.yml
@@ -39,6 +39,7 @@
 - document_collection
 - drcf_digital_markets_research
 - drug_safety_update
+- editionable_topical_event
 - email_alert_signup
 - embassies_index
 - employment_appeal_tribunal_decision
