--- a/.github/workflows/test-content-schemas-1.yml
+++ b/.github/workflows/test-content-schemas-1.yml
@@ -7,13 +7,18 @@ on:
       - main
     paths:
       - "content_schemas/**"
-      - "!content_schemas/README.md"
   pull_request:
     paths:
       - "content_schemas/**"
-      - "!content_schemas/README.md"
 
 jobs:
+  all-jobs-completed:
+    name: All jobs completed
+    runs-on: ubuntu-latest
+    needs: [test-collections-publisher, test-collections, test-contacts-admin, test-content-data-api, test-content-publisher, test-content-store, test-content-tagger, test-email-alert-frontend, test-email-alert-service, test-feedback, test-finder-frontend, test-frontend, test-government-frontend, test-hmrc-manuals-api]
+    steps:
+      - run: 'echo "All content schema tests completed." '
+
   test-collections-publisher:
     name: Test Collections Publisher
     uses: alphagov/collections-publisher/.github/workflows/rspec.yml@main
