Add job to delete old `Event` data
According to the documentation [1], the `Event` model contains data
solely for debugging by developers.

The table has been growing in size recently since the task to export
data to S3 broke and was subsequently switched off [2].

Therefore adding a new lightweight task to delete `Event` records that
are older than 30 days.

1: https://github.com/alphagov/publishing-api/blob/bdf8c1ddda898df1fb2f2e68102f63c2a4e2ac47/docs/model.md?plain=1#L238-L240
2: https://github.com/alphagov/govuk-helm-charts/pull/2448

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -15,3 +15,5 @@
   :schedule:
     UpdateStatisticsCachesJob:
       cron: '30 2 * * *' # Runs at 2:30 a.m every day
+    RemoveOldEventsJob:
+      cron: '30 3 * * *' # Runs at 3:30 a.m every day
