--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -29,3 +29,6 @@ test:
 # and move the `production:` environment over there.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+production_replica:
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
