Add `production_replica` environment to rubocop
Rubocop raises a `Rails/UnknownEnv` error on
`Rails.env.production_replica?`.

Therefore adding the `production_replica` environment, so rubocop no
longer fails.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,13 @@ inherit_mode:
   merge:
     - Exclude
 
+Rails/UnknownEnv:
+  Environments:
+    - development
+    - test
+    - production
+    - production_replica
+
 # **************************************************************
 # TRY NOT TO ADD OVERRIDES IN THIS FILE
 #
